--- a/SoundSharp/SoundSharp.csproj
+++ b/SoundSharp/SoundSharp.csproj
@@ -36,6 +36,9 @@
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.7.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -75,23 +78,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consts\FileNames.cs" />
-    <Compile Include="Favorites.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Favorites.Designer.cs">
-      <DependentUpon>Favorites.cs</DependentUpon>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Login.Designer.cs">
-      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\Playlist.cs" />
@@ -109,39 +100,21 @@
     <Compile Include="PlaylistDisplay.Designer.cs">
       <DependentUpon>PlaylistDisplay.cs</DependentUpon>
     </Compile>
-    <Compile Include="Profile.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Profile.Designer.cs">
-      <DependentUpon>Profile.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DbHandler.cs" />
-    <EmbeddedResource Include="Favorites.resx">
-      <DependentUpon>Favorites.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
-      <DependentUpon>Login.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="obj\Debug\SoundSharp.Favorites.resources" />
-    <EmbeddedResource Include="obj\Debug\SoundSharp.LoginForm.resources" />
     <EmbeddedResource Include="obj\Debug\SoundSharp.MainWindow.resources" />
     <EmbeddedResource Include="obj\Debug\SoundSharp.Playlist.resources" />
     <EmbeddedResource Include="obj\Debug\SoundSharp.PlaylistDisplay.resources" />
-    <EmbeddedResource Include="obj\Debug\SoundSharp.Profile.resources" />
     <EmbeddedResource Include="obj\Debug\SoundSharp.Properties.Resources.resources" />
     <EmbeddedResource Include="Playlist.resx">
       <DependentUpon>Playlist.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PlaylistDisplay.resx">
       <DependentUpon>PlaylistDisplay.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Profile.resx">
-      <DependentUpon>Profile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -245,6 +218,8 @@
     <Content Include="obj\Debug\SoundSharp.exe" />
     <Content Include="obj\Debug\SoundSharp.pdb" />
     <Content Include="obj\Debug\TempPE\Properties.Resources.Designer.cs.dll" />
+    <None Include="Resources\listaRosa.png" />
+    <None Include="Resources\carpeta.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Database\Program\" />
