--- a/SoundSharp/SoundSharp.csproj
+++ b/SoundSharp/SoundSharp.csproj
@@ -246,6 +246,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DbHandler.cs" />
+    <Compile Include="Views\Formpru.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Formpru.Designer.cs">
+      <DependentUpon>Formpru.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\PlaylistMenu\PlaylistForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -279,6 +285,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\Formpru.resx">
+      <DependentUpon>Formpru.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\PlaylistMenu\PlaylistForm.resx">
       <DependentUpon>PlaylistForm.cs</DependentUpon>
     </EmbeddedResource>
