--- a/SoundSharp/SoundSharp.csproj
+++ b/SoundSharp/SoundSharp.csproj
@@ -226,6 +226,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Consts\ErrorMessages.cs" />
     <Compile Include="Consts\FileNames.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -237,15 +238,19 @@
     <Compile Include="Models\Playlist.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
-    <Compile Include="PlaylistDisplay.cs">
+    <Compile Include="Views\AddSongs.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PlaylistDisplay.Designer.cs">
-      <DependentUpon>PlaylistDisplay.cs</DependentUpon>
+    <Compile Include="Views\AddSongs.Designer.cs">
+      <DependentUpon>AddSongs.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DbHandler.cs" />
+    <Compile Include="Utils\ErrorHandler.cs" />
+    <Compile Include="Utils\InputValidators.cs" />
+    <Compile Include="Utils\InputSuggestions.cs" />
+    <Compile Include="Utils\Misc.cs" />
     <Compile Include="Views\Formpru.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -269,11 +274,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\SoundSharp.AddList.resources" />
     <EmbeddedResource Include="obj\Debug\SoundSharp.MainWindow.resources" />
-    <EmbeddedResource Include="obj\Debug\SoundSharp.PlaylistDisplay.resources" />
     <EmbeddedResource Include="obj\Debug\SoundSharp.PlaylistView.resources" />
     <EmbeddedResource Include="obj\Debug\SoundSharp.Properties.Resources.resources" />
-    <EmbeddedResource Include="PlaylistDisplay.resx">
-      <DependentUpon>PlaylistDisplay.cs</DependentUpon>
+    <EmbeddedResource Include="Views\AddSongs.resx">
+      <DependentUpon>AddSongs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
