--- a/SoundSharp/packages.config
+++ b/SoundSharp/packages.config
@@ -63,4 +63,5 @@
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Web.Services.Description" version="4.9.0" targetFramework="net472" />
+  <package id="TagLibSharp" version="2.3.0" targetFramework="net472" />
 </packages>
